--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 <div class="flex-shrink-0">
                     <a href="#" class="text-xl font-bold text-indigo-400 hover:text-indigo-300 transition duration-300">[S.G.]</a>
                 </div>
+                <!-- Desktop Menu -->
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
                         <a href="#about" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium transition duration-300">About</a>
@@ -106,12 +107,22 @@
                         <a href="#contact" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium transition duration-300">Contact</a>
                     </div>
                 </div>
-                <!-- Mobile Menu Button (for a real app, this would toggle a hidden menu) -->
+                <!-- Mobile Menu Button -->
                 <div class="md:hidden">
-                    <button class="text-gray-400 hover:text-white p-2 rounded-md" aria-label="Menu">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+                    <button id="mobile-menu-button" class="text-gray-400 hover:text-white p-2 rounded-md" aria-label="Menu">
+                        <i data-lucide="menu" class="w-6 h-6"></i>
                     </button>
                 </div>
+            </div>
+        </div>
+        <!-- Mobile Menu Content (Hidden by default, toggled by JS) -->
+        <div id="mobile-menu" class="hidden md:hidden border-t border-gray-800">
+            <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
+                <a href="#about" class="block text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-base font-medium transition duration-300">About</a>
+                <a href="#skills" class="block text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-base font-medium transition duration-300">Skills</a>
+                <a href="#projects" class="block text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-base font-medium transition duration-300">Projects</a>
+                <a href="#experience" class="block text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-base font-medium transition duration-300">Experience</a>
+                <a href="#contact" class="block text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-base font-medium transition duration-300">Contact</a>
             </div>
         </div>
     </nav>
@@ -187,8 +198,6 @@
                     <i data-lucide="atom" class="w-6 h-6 text-indigo-400 mx-auto mb-2"></i>
                     <p class="text-sm font-medium text-gray-200">React.js</p>
                 </div>
-                <!-- Skill Card 6: Removed REST/GraphQL per request. -->
-                <!-- Git/GitHub card moved to DevOps -->
             </div>
 
             <h3 class="text-xl font-semibold text-indigo-300 mb-4">Databases, Caching & Search</h3>
@@ -241,7 +250,6 @@
                     <i data-lucide="route" class="w-6 h-6 text-yellow-400 mx-auto mb-2"></i>
                     <p class="text-sm font-medium text-gray-200">Apache Kafka</p>
                 </div>
-                <!-- CI/CD and IT Fundamentals cards removed per user request -->
             </div>
         </section>
 
@@ -432,7 +440,7 @@
     <!-- Footer -->
     <footer class="bg-gray-900 border-t border-gray-800 mt-12 py-8">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-500">
-            &copy; 2025 Savan Ghori. All rights reserved.
+            &copy; 2024 Savan Ghori. All rights reserved. Built with ❤️ and Node.js love.
         </div>
     </footer>
 
@@ -440,6 +448,22 @@
     <script>
         // Initialize Lucide Icons
         lucide.createIcons();
+
+        // Mobile Menu Toggle Logic
+        const mobileMenuButton = document.getElementById('mobile-menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        mobileMenuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+
+        // Hide mobile menu when a link is clicked (for better UX)
+        mobileMenu.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', () => {
+                mobileMenu.classList.add('hidden');
+            });
+        });
+
 
         // Rotating Text Effect
         const rotatingText = document.getElementById('rotating-text');
