--- a/index.html
+++ b/index.html
@@ -424,14 +424,14 @@
 
                 <!-- Simple Contact Form (Now using Formspree) -->
                 <!-- 
-                    *** ACTION REQUIRED: IMPORTANT FIX FOR savanghori1203@gmail.com ***
+                    *** ACTION REQUIRED: FIX REQUIRED FOR 'Form not found' ERROR ***
                     
                     1. Go to https://formspree.io/ and create a new form.
                     2. Set the destination email to savanghori1203@gmail.com and verify it.
                     3. Formspree will give you a UNIQUE URL (e.g., 'https://formspree.io/f/xnqrjywa').
                     4. REPLACE the placeholder URL below with your unique, verified Formspree URL.
                 -->
-                <form id="contact-form" action="https://formspree.io/f/REPLACE_THIS_WITH_YOUR_UNIQUE_FORMSPREE_URL" method="POST" class="space-y-4 p-6 bg-gray-800 rounded-xl shadow-inner border border-gray-700">
+                <form id="contact-form" action="https://formspree.io/f/mvgjrpdr" method="POST" class="space-y-4 p-6 bg-gray-800 rounded-xl shadow-inner border border-gray-700">
                     <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 rounded-lg bg-gray-700 border border-gray-600 text-white placeholder-gray-400 focus:ring-indigo-500 focus:border-indigo-500">
                     <input type="email" name="email" placeholder="Your Email" required class="w-full p-3 rounded-lg bg-gray-700 border border-gray-600 text-white placeholder-gray-400 focus:ring-indigo-500 focus:border-indigo-500">
                     <textarea name="message" placeholder="Your Message" rows="4" required class="w-full p-3 rounded-lg bg-gray-700 border border-gray-600 text-white placeholder-gray-400 focus:ring-indigo-500 focus:border-indigo-500"></textarea>
@@ -553,8 +553,9 @@
                         let errorMessage = responseData.error || "Oops! There was an error submitting your form.";
                         
                         // Inform user about the most common failure cause (wrong URL)
-                        if (response.status === 405) {
-                            errorMessage = "Form submission failed. Did you replace the placeholder URL in the HTML code with your unique Formspree endpoint?";
+                        if (response.status === 405 || form.action.includes('YOUR_UNIQUE_FORM_ID_HERE')) {
+                            // Changed to check for the current placeholder in addition to the 405 status
+                            errorMessage = "Form submission failed. You must replace 'YOUR_UNIQUE_FORM_ID_HERE' in the HTML with your personal Formspree endpoint.";
                         }
 
                         status.textContent = errorMessage;
