Google Search favicon icon added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Updated Title -->
     <title>Savan Ghori - Backend Developer | Scalable Microservices & APIs</title>
+
+    <link rel="icon" type="image/png" href="/logo-removebg.png">
+    <link rel="shortcut icon" href="/logo-removebg.png">
+    <link rel="apple-touch-icon" href="/logo-removebg.png">
     
     <!-- SEO Optimization Meta Tags -->
     <meta name="description" content="Savan Ghori is a dedicated Node.js Backend Developer specializing in building scalable, resilient APIs and Microservices using JavaScript, CockroachDB, MongoDB, and cloud infrastructure (AWS/GCP).">
