Image name changes

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <!-- Updated Title -->
     <title>Savan Ghori - Backend Developer | Scalable Microservices & APIs</title>
 
-    <link rel="icon" type="image/png" href="/logo-removebg.png">
-    <link rel="shortcut icon" href="/logo-removebg.png">
-    <link rel="apple-touch-icon" href="/logo-removebg.png">
+    <link rel="icon" type="image/png" href="/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/favicon.ico">
     
     <!-- SEO Optimization Meta Tags -->
     <meta name="description" content="Savan Ghori is a dedicated Node.js Backend Developer specializing in building scalable, resilient APIs and Microservices using JavaScript, CockroachDB, MongoDB, and cloud infrastructure (AWS/GCP).">
